--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ html {
   background-position-x: center;
   background-repeat: no-repeat;
   border-color: #000;
-  color: #000;
   font-family: "Open Sans"
 }
 
@@ -25,6 +24,10 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, a {
+  color: #000;
 }
 
 button {
