--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,10 +2,26 @@
   border-bottom: 1px solid #000000;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1rem;
+  text-align: center;
+}
+
 .panel {
   opacity: 0.6;
   background-color: white;
   border-radius: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
 }
