--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -1,10 +1,3 @@
-.wrapper {
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
-  text-align: center;
-}
-
 .begin {
   margin-right: 1rem;
   width: 40%;
@@ -29,12 +22,14 @@
   display: flex;
   font-size: 0.5rem;
   justify-content: flex-end;
-  padding: 0.25rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  padding-bottom: 0.25rem;
   text-align: right;
 }
 
 @media only screen and (max-width: 768px) {
-  .wrapper {
+  .content {
     flex-direction: column-reverse;
   }
 
