--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,17 @@
 
 @font-face {
   font-family: "Open Sans";
-  src: local("Open Sans"),
-    url(./fonts/OpenSans-Regular.ttf) format("truetype");
+  src: local("Open Sans"), url(./fonts/OpenSans-Regular.ttf) format("truetype");
 }
-
 
 html {
   /* background-color: #827481; */
+  background-color: rgba(247, 247, 247);
   background-image: url(./images/image_0.jpeg);
   background-position-x: center;
   background-repeat: no-repeat;
   border-color: #000;
-  font-family: "Open Sans"
+  font-family: "Open Sans";
 }
 
 body {
@@ -26,7 +25,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, a {
+html,
+a {
   color: #000;
 }
 
@@ -34,10 +34,17 @@ button {
   font-family: "Open Sans";
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-weight: normal;
   font-family: "Cedarville Cursive", cursive;
   margin: 0;
+}
+
+h1, h2 {
+  font-size: 2em;
 }
 
 code {
