panel content max height

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -24,4 +24,9 @@
   .content {
     flex-direction: column;
   }
+
+  .panel .panel-content {
+    max-height: 21rem;
+    overflow-y: scroll;
+  }
 }
