--- a/src/Components/Wedding/Wedding.module.css
+++ b/src/Components/Wedding/Wedding.module.css
@@ -8,6 +8,11 @@
   width: 300px;
 }
 
+.bridges {
+  height: 232px;
+  opacity: 1;
+}
+
 @media only screen and (max-width: 768px) {
   .panel {
     width: auto;
