--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,8 @@
+:root {
+  --main-bg-color:rgba(250, 242, 252, 0.8);
+  --opacity-level: 0.8;
+}
+
 .App-header {
   border-bottom: 1px solid #000000;
 }
@@ -11,17 +16,12 @@
 }
 
 .panel {
-  opacity: 0.6;
-  background-color: white;
+  background-color: var(--main-bg-color);
   border-radius: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   flex-direction: column;
   padding: 1rem;
-}
-
-.opaque {
-  opacity: 1;
 }
 
 @media only screen and (max-width: 768px) {
@@ -32,9 +32,5 @@
   .panel .panel-content {
     max-height: 21rem;
     overflow-y: scroll;
-  }
-
-  .mobile-opaque {
-    opacity: 1;
   }
 }
