--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   border-bottom: 1px solid;
   padding: 0.5rem 1rem;
+  background-color: var(--main-bg-color);
 }
 
 .link-wrapper {
