box shadow hover

--- a/styles/App.css
+++ b/styles/App.css
@@ -18,10 +18,16 @@
 .panel {
   background-color: var(--main-bg-color);
   border-radius: 1rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
   display: flex;
   flex-direction: column;
   padding: 1rem;
+}
+
+.panel:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 @media only screen and (max-width: 768px) {
