--- a/styles/App.css
+++ b/styles/App.css
@@ -20,14 +20,28 @@
   border-radius: 1rem;
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  transition: 0.3s;
 }
 
 .panel:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.panel > h2 {
+  border-bottom: 1px solid black;
+}
+
+.begin {
+  margin-right: 1rem;
+  width: 40%;
+}
+
+.end {
+  width: 60%;
 }
 
 @media only screen and (max-width: 768px) {
