--- a/styles/App.css
+++ b/styles/App.css
@@ -49,6 +49,10 @@
     flex-direction: column;
   }
 
+  .panel {
+    width: auto;
+  }
+
   .panel .panel-content {
     max-height: 21rem;
     overflow-y: scroll;
