--- a/src/Components/Wedding/Wedding.module.css
+++ b/src/Components/Wedding/Wedding.module.css
@@ -1,6 +1,7 @@
-/* .when {
-  font-size: 3rem;
-} */
+.container {
+  position: relative;
+  margin: auto;
+}
 
 .mapLink {
   display: contents;
@@ -8,4 +9,29 @@
 
 .invite {
   border-radius: 2.1rem;
+}
+
+.rsvpButton {
+  position: absolute;
+  top: 88%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: var(--main-bg-color);
+  color: black;
+  font-size: 2rem;
+  padding: 0.5rem 2rem;
+  border-radius: 5px;
+  box-shadow: var(--box-shadow);
+  text-decoration: none;
+}
+
+.rsvpButton:hover {
+  opacity: 0.7;
+}
+
+@media only screen and (max-width: 768px) {
+  .rsvpButton {
+    font-size: 1rem;
+  }
 }
