--- a/styles/App.css
+++ b/styles/App.css
@@ -1,5 +1,7 @@
 :root {
-  --main-bg-color:rgba(250, 242, 252, 0.8);
+  --box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  --cursive: "Cedarville Cursive", cursive;
+  --main-bg-color: rgba(250, 242, 252, 0.8);
   --opacity-level: 0.8;
 }
 
@@ -9,7 +11,7 @@
 
 .content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   padding: 1rem;
   text-align: center;
@@ -19,7 +21,7 @@
   background-color: var(--main-bg-color);
   border-radius: 1rem;
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: var(--box-shadow);
   height: fit-content;
   display: flex;
   flex-direction: column;
