--- a/styles/index.css
+++ b/styles/index.css
@@ -39,7 +39,7 @@ h2,
 h3,
 h4 {
   font-weight: normal;
-  font-family: "Cedarville Cursive", cursive;
+  font-family: var(--cursive);
   margin: 0;
 }
 
