--- a/src/Components/Wedding/Wedding.module.css
+++ b/src/Components/Wedding/Wedding.module.css
@@ -31,6 +31,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .container {
+    margin: 0;
+  }
+  
   .rsvpButton {
     font-size: 1rem;
   }
