--- a/styles/index.css
+++ b/styles/index.css
@@ -9,10 +9,43 @@
   src: local("Open Sans"), url(../public/fonts/OpenSans-Regular.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: 'Material Icons Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../public/fonts/MaterialIconsOutlined-Regular.otf);
+}
+
+.material-icons-outlined {
+  align-items: center;
+  font-family: 'Material Icons Outlined';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: flex;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 html {
   /* background-color: #827481; */
   background-color: rgba(247, 247, 247);
-  background-image: url(../public/images/image_0.jpeg);
+  background-image: url(../public/images/background.jpeg);
   background-position-x: center;
   background-repeat: no-repeat;
   border-color: #000;
