--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -34,7 +34,7 @@
 @media only screen and (max-width: 768px) {
   .link-wrapper {
     flex-direction: column;
-    margin-right: 0;
+    margin-right: 1rem;
   }
 
   .link-wrapper a {
