--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -15,6 +15,10 @@
   margin-right: 2rem;
 }
 
+.link-wrapper a {
+  font-family: var(--cursive);
+}
+
 .link-wrapper a:not(:last-child) {
   margin-right: 2rem;
 }
