--- a/src/Components/Wedding/Wedding.module.css
+++ b/src/Components/Wedding/Wedding.module.css
@@ -1,6 +1,5 @@
 .container {
   position: relative;
-  margin: auto;
 }
 
 .invite-wrapper {
@@ -32,6 +31,10 @@
   opacity: 0.7;
 }
 
+.faqContainer {
+  max-width: 50%;
+}
+
 @media only screen and (max-width: 768px) {
   .container {
     margin: 0;
@@ -39,5 +42,9 @@
   
   .rsvp-button {
     font-size: 1rem;
+  }
+
+  .faqContainer {
+    max-width: 100%;
   }
 }
