--- a/styles/App.css
+++ b/styles/App.css
@@ -10,10 +10,7 @@
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  padding: 1rem;
   text-align: center;
 }
 
@@ -23,9 +20,6 @@
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
   box-shadow: var(--box-shadow);
   height: fit-content;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
   transition: 0.3s;
 }
 
@@ -35,6 +29,13 @@
 
 .panel > h2 {
   border-bottom: 1px solid black;
+}
+
+.content, .panel {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
 
 .begin {
