--- a/src/Components/Wedding/Wedding.module.css
+++ b/src/Components/Wedding/Wedding.module.css
@@ -18,17 +18,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: var(--main-bg-color);
-  color: black;
-  font-size: 2rem;
-  padding: 0.5rem 2rem;
-  border-radius: 5px;
-  box-shadow: var(--box-shadow);
-  text-decoration: none;
-}
-
-.rsvp-button:hover {
-  opacity: 0.7;
 }
 
 .faqContainer {
@@ -38,6 +27,10 @@
 @media only screen and (max-width: 768px) {
   .container {
     margin: 0;
+  }
+
+  .desktop-header {
+    display: none;
   }
   
   .rsvp-button {
