--- a/styles/App.css
+++ b/styles/App.css
@@ -2,6 +2,7 @@
   --box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   --cursive: "Cedarville Cursive", cursive;
   --main-bg-color: rgba(250, 242, 252, 0.8);
+  --border-color: #d6d6d6;
   --opacity-level: 0.8;
 }
 
