Add icons to headings

--- a/src/Components/Gifting/Gifting.module.css
+++ b/src/Components/Gifting/Gifting.module.css
@@ -3,6 +3,10 @@
   width: 50%;
 }
 
+.header::before {
+  content: "\e8b1";
+}
+
 .gift-wrapper {
   display: flex;
   justify-content: space-around;
