--- a/styles/App.css
+++ b/styles/App.css
@@ -61,6 +61,11 @@
   border-bottom: 1px solid;
 }
 
+.with-icon::before {
+  font-family: "Material Icons Outlined";
+  padding-right: 0.5rem;
+}
+
 @media only screen and (max-width: 768px) {
   .content {
     flex-direction: column;
