add rsvp notice

--- a/src/Components/RSVP/RSVP.module.css
+++ b/src/Components/RSVP/RSVP.module.css
@@ -7,6 +7,13 @@
   width: 100%;
 }
 
+.help {
+  background-color: var(--main-bg-color);
+  bottom: 0;
+  padding: 0.5rem 1rem;
+  position: fixed;
+}
+
 @media only screen and (max-width: 768px) {
   .panel {
     width: auto;
